# openim-sdk-core

./: .gitignore  bootstrap_install_mage.bat  bootstrap_install_mage.sh  gen_ts.sh  go.mod  go.sum  how-to-build-magefile.md  magefile.go  package-lock.json  package.json
CHANGELOG/: CHANGELOG-3.8.md
bindings/base/: api_registry.go  callbacks.go  dispatcher.go
bindings/ffi_c/: ffi_handler.go  main.go
bindings/gomobile/: ffi_handler.go
bindings/wasm/: ffi_handler.go  main.go  make.bat
c_cpp_wrapper/: CMakeLists.txt  build_android.bat  c.go  export.go  listener.go  test.cc  test.go
example/: go.mod  go.sum  main.go
example/common/: utils.go
example/ui/: listener_conn.go  listener_conversation.go  listener_custombusiness.go  listener_friendship.go  listener_group.go  listener_message.go  listener_user.go  main.go  menu.go  ui.go  ui_menu.go  win_conversation_info.go  win_conversation_list.go  win_friend_info.go  win_friend_list.go  win_friend_search.go  win_group_create.go  win_group_info.go  win_group_list.go  win_mgr.go  win_user_info.go  win_user_search.go  win_userinfo.go  win_version.go
internal/conversation_msg/: api.go  conversation.go  conversation_msg.go  conversion.go  conversion_1.go  conversion_config.go  conversion_conversation.go  conversion_message.go  conversion_msg.go  conversion_msg_test.go  create_message.go  delete.go  entering.go  image.go  incremental_sync.go  message_check.go  notification.go  progress.go  read_drawing.go  revoke.go  sort.go  stream_msg.go  sync.go
internal/group/: api.go  (+4 more)
msgtest/: config.go
open_im_sdk/: api.go  apicb.go  caller.go  em.go  init_login.go  userRelated.go  user_context.go
open_im_sdk_callback/: callback_client.go  callback_go_sdk.go
proto/: any.proto  common.go  common.pb.go  common.proto  common.sdkAPI.proto  conversation.docs.proto  conversation.pb.go  conversation.proto  conversation.sdkAPI.proto  error.pb.go  error.proto  event.pb.go  event.proto  ffi.pb.go  ffi.proto  gen.cmd  group.api.proto  group.pb.go  group.proto  init.pb.go  init.proto  interop.proto  js-bridge.pb.go  js_bridge.pb.go  js_bridge.proto  message.pb.go  message.proto  msg.pb.go  msg.proto  msggateway.pb.go  msggateway.proto  one_test.go  relation.pb.go  relation.proto  shared.pb.go  shared.proto  shared.sdkAPI.proto  third.pb.go  third.proto  user.pb.go  (+2 more)
sdk_struct/: sdk_struct.go
test/: config.go  conversation_test.go  create_msg_test.go  doc-limit.txt  empty_test.go  file_test.go  friend_test.go  group_test.go  init.go  listener.go  long_conn_test.go  message_size_test.go  third_test.go  user_test.go
(+216 files in other folders)
